--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         rounded-full bg-center bg-cover"></div>
 
        <nav class="flex gap-4 justify-center p-4">
-     <a class="border rounded px-4 py-2 text-pink-600 hover:bg-rose-100 cursor-pointer"
+     <a class="text-center border rounded px-4 py-2 text-pink-600 hover:bg-rose-100 cursor-pointer"
      onclick="showSection('home')">Starting Point!</a>
      <a class="border rounded px-4 py-2 text-pink-600 hover:bg-rose-100 cursor-pointer"
      onclick="showSection('trivia')">Who's Akiyama Mizuki?</a>
@@ -136,10 +136,10 @@
             bersekolah di Akademi Miyamasuzaka. Mizuki bersekolah di SMA Kamiyama seperti Ena, tetapi
             Ena menjalankan program karyawan dan hanya mendatangi sekolah di jam malam. Sementara
             Kanade menjalankan home-schooling. 
-            </p>
+            </p><br/>
             <br/>
             <a href="https://projectsekai.fandom.com/wiki/Akiyama_Mizuki" 
-            class="text-left text-pink-600 hover:text-rose-500 underline">
+            class="text-right italic text-rose-600 hover:text-rose-500 underline">
                 Klik di sini untuk cek trivia Mizuki lainnya di Project Sekai WikiFandom✨
             </a>
  
