--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="flex flex-col items-center gap-4">
     <div class="h-50 w-50 bg-[url('https://drive.google.com/thumbnail?id=11_hUN0vXe-wyjcvUw1Ujfgdjz7Lh62iG')]
     bg-center bg-cover rounded-lg"></div>
-                <p class="text-center py-3 text-pink-600">
+                <p class="text-center py-3 px-4 text-pink-600">
                     Halaman ini adalah website demo yang terbentuk untuk memenuhi 
                     tugas pembuatan website dari coding camp RevoU. Juga berfungsi
                     sebagai bentuk dedikasi terhadap Akiyama "Amia" Mizuki!
@@ -141,7 +141,7 @@
             <br/>
             <div class="w-full text-right">
             <a href="https://projectsekai.fandom.com/wiki/Akiyama_Mizuki" 
-            class="italic text-rose-600 hover:text-rose-500 underline">
+            class="px-4 italic text-rose-600 hover:text-rose-500 underline">
             Klik di sini untuk cek trivia Mizuki lainnya di Project Sekai WikiFandom✨
             </a>
             </div>
@@ -222,7 +222,7 @@
 
     <!-- Footer Content -->
     <footer>
-        <p class="text-center text-pink-500 py-30 italic">Remember to take care of yourself
+        <p class="text-center text-pink-500 py-20 italic">Remember to take care of yourself
             cuz therapy is expensive ヾ(๑╹ꇴ◠๑)ﾉ”</p>
     </footer>
 
