--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="text-right">
             <a href="https://projectsekai.fandom.com/wiki/Akiyama_Mizuki" 
             class="px-4 italic text-rose-600 hover:text-rose-500 underline">
-            Klik di sini untuk cek trivia Mizuki lainnya di Project Sekai WikiFandom✨
+            Klik di sini untuk cek trivia Mizuki lainnya di<br/>Project Sekai WikiFandom✨
             </a>
             </div>
 
