--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             Kanade menjalankan home-schooling. 
             </p><br/>
             <br/>
-            <div class="text-right">
+            <div class="pr-2 text-right">
             <a href="https://projectsekai.fandom.com/wiki/Akiyama_Mizuki" 
             class="px-4 italic text-rose-600 hover:text-rose-500 underline">
             Klik di sini untuk cek trivia Mizuki lainnya di<br/>Project Sekai WikiFandom✨
