--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             Kanade menjalankan home-schooling. 
             </p><br/>
             <br/>
-            <div class="pr-2 text-right">
+            <div class="pr-4 text-right">
             <a href="https://projectsekai.fandom.com/wiki/Akiyama_Mizuki" 
-            class="px-4 italic text-rose-600 hover:text-rose-500 underline">
+            class="italic text-rose-600 hover:text-rose-500 underline">
             Klik di sini untuk cek trivia Mizuki lainnya di<br/>Project Sekai WikiFandom✨
             </a>
             </div>
